--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
-  to {
-    transform: rotate(360deg);
+
+
+h1 {
+    color:white;
+    font-family: "Pixelify Sans", sans-serif;
+    font-size: 60px;
+    margin-top: 0px;
+    margin-left: 10px;
+
+}
+
+header {
+    background-color: cornflowerblue;
+
+}
+
+footer {
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
-.card {
-  padding: 2em;
+  .note {
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  width: 240px;
+  margin: 16px;
+  float: left;
 }
-
-.read-the-docs {
-  color: #888;
+.note h1 {
+  font-size: 1.1em;
+  margin-bottom: 6px;
+  color:rgb(62, 96, 148);
+}
+.note p {
+  font-size: 1.1em;
+  margin-bottom: 10px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
